# souls-directory

./: .all-contributorsrc  .editorconfig  .gitignore  .release-please-manifest.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  release-please-config.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/install-deps/: action.yml
.github/actions/setup-pnpm/: action.yml
.github/workflows/: ci-tauri.yml  ci.yml  contributors.yml  release-please-tauri.yml  release-tauri.yml
apps/e2e/: README.md  package.json  playwright.config.ts
apps/souls-studio/: .env.local.example  .gitignore  CHANGELOG.md  README.md  index.html  package.json  playwright.config.ts  vite.config.ts
apps/souls-studio/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
apps/souls-studio/src-tauri/capabilities/: default.json
apps/souls-studio/src-tauri/icons/: icon.icns
apps/souls-studio/src-tauri/src/: main.rs
apps/souls-studio/src-tauri/src/commands/: community_cache.rs  gateway.rs  install.rs  mod.rs  settings.rs  souls.rs  souls_store.rs
apps/souls-studio/src-tauri/src/models/: mod.rs  soul.rs  souls.rs
apps/web/: .env.example  .gitignore  CLAUDE.md  _test_import.ts  convex.json  env.d.ts  next.config.ts  package.json  proxy.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vitest.config.ts  vitest.setup.ts  vitest.stubs.ts
skills/soul-md-creator/: SKILL.md
(+302 files in other folders)
