[package]
name = "souls-studio"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-window-state = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-deep-link = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
dirs = "5.0"
log = "0.4"
sentry = "0.45"
tokio = { version = "1", features = ["net", "time", "rt", "sync", "process", "io-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
url = "2.5"
uuid = { version = "1", features = ["v4"] }
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
